# 32N

./: .mcp.json  AGENTS.md  README.md  skills-lock.json
.github/workflows/: tasks-mcp-server.yml
deployment/tasks-mcp-server/: configmap.yaml  deployment.yaml  service.yaml
notifications-api/: pyproject.toml
notifications-api/src/notifications/: config.py  main.py  schemas.py
notifications-api/src/notifications/routers/: health.py  notify.py
notifications-api/src/notifications/services/: dispatcher.py
notifications-api/tests/: conftest.py  test_health.py  test_notify.py
specs/mcp-server/: decisions.md  implementation-plan.md  tools.md
specs/notifications-api/: decisions.md  implementation-plan.md
tasks-mcp-server/: .dockerignore  Dockerfile  pyproject.toml
tasks-mcp-server/src/tasks_mcp/: __init__.py  models.py  notifications_client.py  server.py  store.py
tasks-mcp-server/src/tasks_mcp/tools/: _helpers.py  add.py  cancel.py  defer.py  finish.py  focus.py  get.py  list.py  search.py  update.py
tasks-mcp-server/tests/: conftest.py
tasks-mcp-server/tests/e2e/: test_server.py
tasks-mcp-server/tests/unit/: test_models.py  test_notifications_client.py  test_store.py
tasks-mcp-server/tests/unit/tools/: test_add.py  test_cancel.py  test_defer.py  test_finish.py  test_focus.py  test_get.py  test_list.py  test_search.py  test_update.py
