[project]
name = "tasks_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "irfanmanzoor12" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

